--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "colors": "1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.4.1",
     "inquirer": "^8.2.5",
     "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
