--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ laravel-echo-server.lock
 /.env
 /aria-corporate-firebase-adminsdk-1p4gk-6ad78e575d.json
 /aria-372708-firebase-adminsdk-5q29c-1e2148e8ea.json
+.htaccess
