--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-echo-server",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "Laravel Echo Node JS Server for Socket.io",
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
+    "get-current-line": "^6.6.0",
     "inquirer": "^8.2.5",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
